--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts" : {
+    "start" : "node server.js"
+  },
   "dependencies": {
     "@google-cloud/storage": "^5.11.0",
     "axios": "^0.21.1",
