--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #google cloud config
 
 GCLOUD_PROJECT_ID = ebook-1f71a
-GCLOUD_APPLICATION_CREDENTIALS = myprivateKey.json
+GCLOUD_APPLICATION_CREDENTIALS = routes/myprivateKey.json
 GCLOUD_STORAGE_BUCKET_URL = gs://ebook-1f71a.appspot.com
 
 
