--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "firebase": "^8.9.1",
     "mongoose": "^5.12.12",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.7"
+    "mysql": "^2.18.1"
   }
 }
